--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ ENV/
 # Environment variables
 .env
 .env.*
+!.env.example
 
 # Deep Learning
 checkpoints/
@@ -53,6 +54,8 @@ outputs/
 *.ckpt
 *.pt
 *.onnx
+
+.cursor/*
 
 # Data
 /data/*
@@ -67,4 +70,4 @@ outputs/
 
 # System files
 .DS_Store
-Thumbs.db 
+Thumbs.db
